# university-thesis

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: epic.md  feature.md  task.md
documentation/: InputManager.md  Logger.md  OpenGLContext.md  Transform2D.md  Vector2D.md
include/components/: Collider.hpp  Script.hpp  SpriteRenderer.hpp  Transform.hpp
include/core/: CollisionManager.hpp  Component.hpp  GameObject.hpp  InputManager.hpp  OpenGLContext.hpp  Scene.hpp  Shader.hpp  Transform2D.hpp  Vector2D.hpp
include/gameobjects/: Box.hpp  Box2.hpp  Camera.hpp  Map.hpp  MapCollider.hpp  Player.hpp
include/glad/: glad.h
include/scenes/: TestScene.hpp
include/scripts/: PlayerScript.hpp
include/tools/: Logger.hpp
resources/: FreeLicense.txt  License.txt
shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl
src/: glad.c  main.cpp
src/components/: Collider.cpp  Script.cpp  SpriteRenderer.cpp  Transform.cpp
src/core/: CollisionManager.cpp  Component.cpp  GameObject.cpp  InputManager.cpp  OpenGLContext.cpp  Scene.cpp  Transform2D.cpp  Vector2D.cpp
src/gameobjects/: Box.cpp  Box2.cpp  Camera.cpp  Map.cpp  MapCollider.cpp  Player.cpp
src/scenes/: TestScene.cpp
src/scripts/: PlayerScript.cpp
src/tools/: Logger.cpp
thesis/: thesis.bib  thesis.tex
thesis/chapters/: introduction.tex
thesis/cover/: assignment.tex  titlepage.tex
thesis/styles/: cpp.sty  thesis.sty
